rules-wireguard.v4
# Generated by iptables-save v1.8.2 on Thu Feb 13 16:58:31 2020
*filter
:INPUT DROP [18:2898]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.1.0/24 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 192.168.1.0/24 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 1337 -j ACCEPT
-A OUTPUT -o wg0 -j ACCEPT
-A OUTPUT -j REJECT --reject-with icmp-net-unreachable
COMMIT
# Completed on Thu Feb 13 16:58:31 2020
